variables.RunFour.scala.error
Compilation error:
RunFour:2: error: not found: value Bagge
while (Bagge!=4){
       ^