variables.RunFour.scala.code
var Baggle:Int=0
while (Bagge!=4){
  if (isOverBaggle==true){
    Baggle=Baggle+1
  }
}
